# insight-monorepo

./: Cargo.toml  readme.md
src/: api.rs  main.rs  models.rs  services.rs
src/api/: handlers.rs
src/db/: mongodb.rs
src/services/: ai_analysis.rs
src/utils/: helpers.rs
